--- a/style.css
+++ b/style.css
@@ -171,12 +171,7 @@ h1 { font-size: 30px;}
 }
 
 
- .image-container .first-img {
-    position: absolute;
-    top: 212px;
-    right: 189px;
-    width: 60px;
- }
+ 
  .image-container .second-img {
     display: inline-block;
     position: relative;
@@ -184,30 +179,25 @@ h1 { font-size: 30px;}
     width: 400px;
  }
 
-.image-container .third-img {
-    position: absolute;
-    left: 346px;
-    top: 224px ;
-    width: 55px 
-}
+
 
 .image-container2{display: flex;
 }
 
 #headlighton1 {
 position: absolute;
-right: 123px;
+right: 125px;
 width: 190px;
-top: 142px;    
+top: 144px;    
 background: transparent;
 }
 
 
 #headlighton2 {
 position: absolute;
-right: -32px;
+right: -33.5px;
 width: 140px;
-top: 168.5px;    
+top: 170px;    
 
 }
 
@@ -234,5 +224,88 @@ top: 168.5px;
 opacity: 1;}
 
 
+@media only screen and (max-width: 1300px) and (min-width: 1000px){
+    .image-container {
+        position: absolute;
+        top: 30%;
+        right: 2%;
 
+    }
+
+    .section2{
+        padding-right: 400px;
+    }
+    .aboutme {
+        font-size: 18px;
+        margin-right: 3em;
+    }
+
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 872px) {
+    .image-container {
+        position: absolute;
+        top: 85%;
+        right: 26%;
+
+    }
+
+     .button {
+        position: absolute;
+        left: 380px;
+        width: auto;
+        padding: 10px 20px;
+    } 
+
+
+    .section2{
+        padding-top: 88px;
+        padding-left: 150px;
+        text-align: center;
+    }
+    .aboutme {
+        font-size: 20px;
+        margin-right: 3em;
+    }
+    .underline {
+        position: absolute;
+        top: 150px;
+        margin: 0 0 0 -205px;
+        padding: 0em;
+    }
+    
+}
+ @media only screen and (max-width: 872px) {
+    .image-container {
+        position: absolute;
+        top: 85%;
+        right: 8%;
+
+    }
+
+     .button {
+        position: absolute;
+        left:43%;
+        width: auto;
+        padding: 10px 20px;
+    } 
+
+
+    .section2{
+        padding-top: 88px;
+        padding-left: 150px;
+        margin: 0;
+        text-align: center;
+    }
+    .aboutme {
+        font-size: 20px;
+        margin-right: 3em;
+    }
+    .underline {
+        position: absolute;
+        top: 150px;
+        margin: 0 0 0 -100px;
+        padding: 0em;
+    }
+} 
 
