--- a/style.css
+++ b/style.css
@@ -560,7 +560,35 @@ top: -0.7em;}
     margin: 0;
     padding: 0;
     color: white;
-    height: 100vh;
-    font-family: var(--main-font-light);
+    height: 112vh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 17px;
+    padding-left: 5em;
     
 }
+
+.email
+{ border-bottom: 5px solid rgb(61, 141, 247) ;
+width: 313px ;
+}
+
+.contactimg {
+    width: 20px;
+     border-bottom: 1px solid rgb(35, 35, 35);}
+
+.lilaboutme {
+    position: absolute;
+    right: -2em;
+    top: 7em;
+    text-align: center;
+}
+
+.littlesaai {
+    width: 24rem;
+
+ }
+
+
+
+
