--- a/style.css
+++ b/style.css
@@ -518,11 +518,7 @@ padding-left: 1em;}
     transform: translateY(-50%);
 }
 
-.omega {
-    position: absolute;
-    bottom:  23.5em;
-    left: 15em;
-}
+
 
 .curly
 {font-size: 8em;
@@ -541,11 +537,33 @@ left: -.3em;
 top: -0.7em;}
 
 .james {
+    background-color: #f0f0f0; 
+        padding: 15px 20px 20px 20px; 
+        border-radius: 10px; 
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
+        width: 300px; 
+        text-align: center;
     position: absolute;
-    bottom:  17em;
+    bottom:  13.5em;
     left: 15em;
     
 }
+
+.omega {
+    position: absolute;
+    bottom:  23.5em;
+    left: 15em;
+
+    background-color: #f0f0f0; 
+    padding: 15px 20px 20px 20px; 
+    border-radius: 10px; 
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
+    width: 300px; 
+    text-align: center;
+position: absolute;}
+.omega p { font-size:18px ;
+font-weight: bold;}
+
 .teakadai {
     position: absolute;
     bottom:  17em;
@@ -560,10 +578,10 @@ top: -0.7em;}
     margin: 0;
     padding: 0;
     color: white;
-    height: 112vh;
+    height: 118vh;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 17px;
+    font-size: 18px;
     padding-left: 5em;
     
 }
@@ -579,8 +597,8 @@ width: 313px ;
 
 .lilaboutme {
     position: absolute;
-    right: -2em;
-    top: 7em;
+    right: 2em;
+    top: 5em;
     text-align: center;
 }
 
@@ -589,6 +607,10 @@ width: 313px ;
 
  }
 
+.thankyou {
+    text-align: center;
+    padding-top: 08.5em;
+}
 
 
 
