--- a/style.css
+++ b/style.css
@@ -518,56 +518,65 @@ padding-left: 1em;}
     transform: translateY(-50%);
 }
 
+.arroww {
+    position:absolute;
+    left: 4em ;
+    width: 7rem ;
+    bottom: -1.5em;
+}
 
 
-.curly
-{font-size: 8em;
-position: absolute;
-left: 3.6em;
-top: -.3em;}
-.curly2
-{font-size: 7em;
-position: absolute;
-left: 4.15em;
-top: -.24em;}
-.curly3
-{font-size: 33em;
-position: absolute;
-left: -.3em;
-top: -0.7em;}
+
 
 .james {
-    background-color: #f0f0f0; 
+    background-color: #ffffff; 
         padding: 15px 20px 20px 20px; 
         border-radius: 10px; 
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
         width: 300px; 
         text-align: center;
     position: absolute;
-    bottom:  13.5em;
-    left: 15em;
+    right: 3em;
+    top: 20em;
+   
     
+}
+.james p { font-size:18px ;
+    font-weight: bold;}
+
+
+.james img {
+    width: 30px;
+    position: absolute;
+    left: 23em;
+    top: 1em;
 }
 
 .omega {
     position: absolute;
-    bottom:  23.5em;
-    left: 15em;
-
-    background-color: #f0f0f0; 
+    right: 3em;
+    top: 3.5em;
+    background-color: #ffffff; 
     padding: 15px 20px 20px 20px; 
     border-radius: 10px; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
     width: 300px; 
-    text-align: center;
-position: absolute;}
+    text-align: center;}
+
 .omega p { font-size:18px ;
 font-weight: bold;}
+
+.omega img {
+    width: 30px;
+    position: absolute;
+    left: 23em;
+    top: 10em;
+}
 
 .teakadai {
     position: absolute;
     bottom:  17em;
-    left: 60em;
+    right: 5em;
 }
 
 
@@ -609,7 +618,7 @@ width: 313px ;
 
 .thankyou {
     text-align: center;
-    padding-top: 08.5em;
+    padding-top: 8.5em;
 }
 
 
