--- a/style.css
+++ b/style.css
@@ -255,6 +255,10 @@
         
     }
 
+    .page2stuff{
+        display: none;
+    }
+
     .mainfont {
         font-family: var(--main-font-bold);
     }
@@ -356,7 +360,7 @@
 
 
     .skills li {
-        font-size: clamp(16px, 2.0vw, 18px);
+        font-size: clamp(10px, 3.0vw, 18px);
         list-style-type: none;
         padding-top: .4em;
     } 
@@ -424,7 +428,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        
+        padding-left: 1rem;
     }
 
 
@@ -486,7 +490,7 @@
         background-color: #ffffff; 
         padding: 15px 20px 20px 20px; 
         border-radius: 10px; 
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
         width: 300px; 
         text-align: center;}
 
@@ -522,9 +526,16 @@
         
     }
 
+    .available{
+        padding-top: 10em ;
+    }
+    .available p
+    {
+        margin-bottom: 3em;
+    }
     .email
     { border-bottom: 5px solid rgb(61, 141, 247) ;
-    width: 313px ;
+    width: 290px ;
     }
 
     .contactimg {
@@ -538,6 +549,9 @@
         text-align: center;
     }
 
+    .lilaboutme p {
+        width: 45rem;
+     }
     .littlesaai {
         width: 24rem;
 
@@ -545,7 +559,7 @@
 
     .thankyou {
         text-align: center;
-        padding-top: 8.5em;
+        padding-top: 11em;
     }
 
 
@@ -607,15 +621,26 @@
             padding: 0 0 0 1em;
             
         }
-    
-    
+    /** page4**/
+    .arroww, .teakadai {
+        display: none;
+
+    }
+    /** page5**/
+
+    .littlesaai {
+        width: clamp(10rem,40vh,28rem);
+    }
+
+    .page5 p {
+        font-size: 13px;
+    }
 
     } 
 
     
 
     
-
     @media only screen and (max-width: 1000px) and (min-width: 300px) {
         
         .image-container {
@@ -742,5 +767,159 @@
         
     }
 
+     /** page4**/
+     .arroww, .teakadai {
+        display: none;
+
+    }
+
+    .omega, .james {
+        
+       
+        padding: 7px 10px 10px 20px; 
+        width: 150px; }
+    
+        .omega img, .james img {
+            transform: translateX(-300%) scaleX(-1); 
+            }
+
+    .omega p, .omega span,.james p, .james span { 
+        font-size: 13px ;
+    }
+
+    .omega img {
+        width: 30px;
+        position: absolute;
+        left: 23em;
+        top: 10em;
+    }
+
+    .littlesaai {
+        width: clamp(10rem,40vh,28rem);
+    }
+
+    .page5 p {
+        font-size: 13px;
+    }
+    .page5 {
+        padding: 20px;
+    }
+
+    .lilaboutme {
+        text-align: end;
+    }
+    .lilaboutme p {
+       width: 20rem;
+    }
+
+    .contact p {
+        display: inline;
+        margin-right: 3em;
+    }
+
+    .thankyou{
+        transform: translateY(60%);
+    }
+    
+
+    } 
+
+    
+    
+    
+    @media only screen and (max-width: 1000px) and (min-width: 650px) {
+        .page2stuff{
+            display: flex;
+         width: clamp(14rem, 35vw, 20rem);
+            height: 40rem;
+            position: absolute;
+            right: 0rem;
+            top: 2rem;
+        }
+    }
+
+    @media only screen and (max-width: 715px) and (min-width: 320px) {
+        .available{
+            padding-top: 0em ;
+        }
+        .available p
+        {
+            margin-bottom: 2em;
+        }
+
+        .lilaboutme {
+        
+        left:1em;
+        top: 12em;
+        text-align: start;
+        
+    }
+        .lilaboutme h2{
+            font-size: 15px;}
+        
+        .lilaboutme img{
+            width:15rem;}
+        
+    
+    .lilaboutme p {
+       min-width: 20rem;
+     }
+
+    .thankyou
+    {
+        transform: translateY(150%);
+    }
+}
+
+    
+     
+       
+    @media only screen and (max-width: 416px) and (min-width: 250px) {
+    
+        .design, .frontend, .backend{
+            
+            display: none;
+            
+    
+        }
+        .backendtxt
+    {
+        left: 0rem;
+        padding-left: 1em;
+          top: 2.5rem;
+          
+    }
+        .frontendtxt
+    {
+        left: 3.5rem;
+        top: 12rem;
+        
+    }
+        
+
+    .omega, .james {
+        position: absolute;
+        right: 1em;
+       
+        padding: 4px ; 
+        width: 140px; }
+    
+        .omega img, .james img {
+            
+        transform: translateX(-600%) scaleX(-1);}
+      
+
+    .omega p, .omega span,.james p, .james span { 
+        font-size: 13px ;
+    }
+
+    .contact p {
+        
+        margin-right: 1em;
+    }
+    
+        
+        
+    
     }
     
