--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
     :root {
-        --main-font-light: 'Molde Expanded Light', 'Molde Expanded', 'Helvetica', sans-serif;
-        --main-font-bold: 'Molde Expanded Bold', 'Molde Expanded', 'Helvetica';
+        --main-font-light:'Roboto Slab', 'Molde Expanded Light', 'Molde Expanded', sans-serif;
+        --main-font-bold: 'Russo One', 'Helvetica';
         --main-font-heavy: 'Molde Expanded Heavy', 'Molde Expanded', 'Helvetica';
-        --main-font-heavy-italics: 'Molde Expanded Heavy Italic', 'Molde Expanded', 'Helvetica';
-        --main-font-blur: 'Bad Coma', 'Molde Expanded Bold', 'Helvetica';
+        --main-font-heavy-italics: 'Roboto Slab','Molde Expanded Heavy Italic', 'Molde Expanded', 'Helvetica';
+        --main-font-blur:'Bad Coma', 'Russo One','Helvetica';
         --primary-color: #d30000;
 
     }
@@ -132,6 +132,7 @@
     .button {
         width: 100%;
         display: block;
+        text-align: center;
         padding: 10px 20px;
         background-color: var(--primary-color);
         color: white;
@@ -268,7 +269,7 @@
         justify-content: center;
         font-size: clamp(16px, 2.5vw, 36px);
         margin: 0 0 1em 0;
-        padding-top: 1em;
+        padding-top: 2em;
     }
 
     .image-container2 {
@@ -452,7 +453,7 @@
     .arroww {
         position:absolute;
         left: 4em ;
-        width: 7rem ;
+        width: 6.8rem ;
         bottom: -1.5em;
     }
 
@@ -507,7 +508,7 @@
     .teakadai {
         position: absolute;
         bottom:  18em;
-        right: 5em;
+        right: 12em;
     }
 
 
@@ -773,6 +774,10 @@
 
     }
 
+    .page4 h1 {
+        padding-top: 4em;
+    }
+
     .omega, .james {
         
        
@@ -850,7 +855,7 @@
         .lilaboutme {
         
         left:1em;
-        top: 12em;
+        top: 14.2em;
         text-align: start;
         
     }
