--- a/style.css
+++ b/style.css
@@ -879,27 +879,9 @@
     
      
        
-    @media only screen and (max-width: 400px) and (min-width: 250px) {
+    @media only screen and (max-width: 420px) and (min-width: 250px) {
     
-        .design, .frontend, .backend{
-            
-            display: none;
-            
-    
-        }
-        .backendtxt
-    {
-        left: 0rem;
-        padding-left: 1em;
-          top: 2.5rem;
-          
-    }
-        .frontendtxt
-    {
-        left: 3.5rem;
-        top: 12rem;
-        
-    }
+
         
 
     .omega, .james {
@@ -927,4 +909,33 @@
         
     
     }
+
+    @media only screen and (max-width: 410px) and (min-width: 200px) {
+    
+        .frontend{
+            position: absolute;
+            width: 7.5rem;
+            left: -8.12rem;
+            top: 2px;
+    
+        }
+        .design{
+            
+            width: 3.8rem;
+            top: -4px;
+            left: -.5rem;
+        }
+        .backend{
+            position: absolute;
+            width: 6rem;
+            left:3.5rem;
+            top: 5px;
+        }
+        .backendtxt
+    {
+        left: 10rem;
+        
+          
+    
+}}
     
