--- a/projhtmls/projstyle.css
+++ b/projhtmls/projstyle.css
@@ -3,9 +3,13 @@
     --main-font-bold: 'Russo One', 'Helvetica';
     --main-font-heavy: 'Molde Expanded Heavy', 'Molde Expanded', 'Helvetica';
     --main-font-heavy-italics: 'Roboto Slab','Molde Expanded Heavy Italic', 'Molde Expanded', 'Helvetica';
+    --primary-color: #dd2137;  
+    --secondary-color: #fbe4ce; 
+    --thirdy-color: rgb(219, 208, 208); 
+  
 }
 body {
-    background-color: #d00910;
+    background-color:var(--primary-color);
     padding: 60px 0 0 30px;
     font-family: var(--main-font-light);
     
@@ -25,12 +29,12 @@ a {
 .maincontent  h1 {
     font-family: var(--main-font-bold);
     font-size: 50px;
-    color: rgb(255, 255, 255);
+    color: var(--secondary-color);
 }
 
 .maincontent  a, .maincontent li, .maincontent ul, .maincontent p{
     font-family: var(--main-font-light);
-    color: rgb(219, 208, 208);
+    color:var(--thirdy-color);
     font-size: 18px;
     padding-right: 20px;
 }
@@ -45,7 +49,7 @@ a {
     width: 5px;
     height: 5px;
     border-radius: 50%;
-    background-color: rgb(203, 200, 200);
+    background-color: var(--thirdy-color);
     transform: translateY(-1px);
 }
 
@@ -64,7 +68,7 @@ margin:0px
     .read-more {
         background: none;
         border: none;
-        color: rgb(225, 210, 210);
+        color: var(--thirdy-color);
         cursor: pointer;
         padding: 0;
         font-size: var(--main-font-light);
@@ -125,7 +129,7 @@ margin:0px
 }
 
 .bio p {
-    color: white;
+    color: var(--thirdy-color);
 }
 
 
@@ -149,7 +153,7 @@ margin:0px
     text-align: center; 
     height: 80px;
     width: 170px;
-    background-color: white;
+    background-color: var(--secondary-color);
     border-radius: 20px;
     flex-direction: column;
     
@@ -202,4 +206,27 @@ transform: scale(-1);
         width: 500px;
         
     }
+}
+
+
+
+iframe {
+    height: 300px;
+    width: 500px;
+    
+}
+
+.iframe {
+display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mockup1 {
+    width: 600px;
+    padding: 10em 0 0 9em;
+}
+span {
+    text-decoration: underline;
+    color: var(--secondary-color);
 }
